# proiect-cpp

./: CMakeLists.txt  app1.cpp  app2.cpp
shared/classes/: Absenta.cpp  Absenta.h  CerereMotivare.cpp  CerereMotivare.h  Data.cpp  Data.h  Elev.cpp  Elev.h  Nota.cpp  Nota.h
shared/files/: absente.txt  cereri_motivare.txt  elevi.txt  note.txt
